spacing issue

--- a/css/lyrics.css
+++ b/css/lyrics.css
@@ -12,7 +12,7 @@
 }
 
 .lg-lyrics__list {
-    margin: 2rem 0;
+    margin: 0;
     padding: 0;
     list-style: none;
 }
